<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:id="@+id/mainLayout">
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:id="@+id/mainLayout">
			<LinearLayout android:id="@+id/Titre"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal">
				<ImageView android:id="@+id/ImageView01"
					android:layout_width="wrap_content" android:background="@drawable/header"
					android:layout_height="wrap_content"></ImageView>
			</LinearLayout>
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/GlobalSettingsLayout">
				<TextView android:id="@+id/TextView01"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/global_settings"></TextView>
				
			<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enable_thumbs" android:id="@+id/enableThumbs"></CheckBox>
</LinearLayout>
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:id="@+id/Server"
				android:layout_height="wrap_content">
				<TextView android:id="@+id/TextView01"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/server"></TextView>
				<LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent" android:id="@+id/Server"
					android:layout_height="wrap_content">
					<Button android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:id="@+id/renameServerButton"
						android:text="Rename..." android:layout_centerHorizontal="true"></Button>
					<Button android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:id="@+id/addServerButton"
						android:text=" + " android:layout_centerHorizontal="true"></Button>
					<Button android:layout_height="wrap_content"
						android:layout_width="wrap_content" android:id="@+id/removeServerButton"
						android:text="  - " android:layout_centerHorizontal="true"></Button>

				</LinearLayout>
				<Spinner android:layout_height="wrap_content" android:id="@+id/ServerList"
					android:layout_width="fill_parent" android:layout_weight="0.5"></Spinner>
			</LinearLayout>

			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:id="@+id/AdresseIpLayout"
				android:layout_height="wrap_content">
				<TextView android:id="@+id/TextView01"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/ip_address"></TextView>
				<EditText android:text="" android:layout_height="wrap_content"
					android:layout_width="fill_parent" android:id="@+id/AdresseIp"
					android:hint="@string/ip_address"></EditText>
			</LinearLayout>
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:id="@+id/PortLayout">
				<TextView android:id="@+id/TextView01"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/port"></TextView>
				<EditText android:text="" android:layout_height="wrap_content"
					android:id="@+id/Port" android:layout_width="wrap_content"
					android:ems="5" android:hint="@string/port"></EditText>
			</LinearLayout>

			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:id="@+id/IdentificationLayout">
				<TextView android:id="@+id/TextView02"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/login"></TextView>
				<EditText android:text="" android:layout_height="wrap_content"
					android:id="@+id/Login" android:layout_width="fill_parent"
					android:hint="@string/login">
				</EditText>
				<TextView android:id="@+id/TextView03"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/password"></TextView>
				<EditText android:text="" android:layout_height="wrap_content"
					android:id="@+id/Password" android:layout_width="fill_parent"
					android:hint="@string/password" android:inputType="textPassword">
				</EditText>
			</LinearLayout>
			<RelativeLayout android:id="@+id/RelativeLayout01"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
				<Button android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true" android:text="@string/ok_button"
					android:minEms="8" android:id="@+id/ButtonOK"></Button>
				<Button android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:layout_toLeftOf="@+id/ButtonOK"
					android:id="@+id/helpButton" android:text="Help"
					android:layout_centerHorizontal="true"></Button>
			</RelativeLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>

